--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,9 +13,13 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        manifestPlaceholders = [
+                'appAuthRedirectScheme': 'com.googleusercontent.apps.PREFIX'
+        ]
     }
 
-    /*signingConfigs {
+    signingConfigs {
         release {
             storeFile file('hsmapptest.jks')
             keyAlias 'demo'
@@ -24,18 +28,17 @@ android {
             v1SigningEnabled true
             v2SigningEnabled true
         }
-    }*/
+    }
 
     buildTypes {
         release {
-            //signingConfig signingConfigs.release
+            signingConfig signingConfigs.release
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug {
-            //signingConfig signingConfigs.release
-            //debuggable true
-            minifyEnabled false
+            signingConfig signingConfigs.release
+            debuggable true
         }
     }
     compileOptions {
@@ -57,16 +60,22 @@ dependencies {
     implementation 'com.huawei.agconnect:agconnect-core:1.3.1.300'
     implementation "com.huawei.agconnect:agconnect-auth:1.3.1.300"
     implementation "com.huawei.agconnect:agconnect-crash:1.3.1.300"
-    implementation "com.huawei.hms:base:4.0.2.300"
+    implementation "com.huawei.hms:base:4.0.4.300"
     implementation "com.huawei.hms:hwid:4.0.1.300"
 
+    implementation 'com.huawei.hms:push:5.0.0.300'
+
+
+    implementation 'net.openid:appauth:0.7.1'
+    implementation 'com.squareup.okio:okio:1.15.0'
+
     //Google
-    implementation('com.google.android.gms:play-services-auth:18.1.0') {
+    /*implementation('com.google.android.gms:play-services-auth:18.1.0') {
         exclude group: 'com.android.support'
-    }
+    }*/
 
     //firebase
-    implementation 'com.google.firebase:firebase-core:17.5.1'
+    //implementation 'com.google.firebase:firebase-core:17.5.1'
 
 }
 apply plugin: 'com.huawei.agconnect'
