--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
 
         classpath "com.huawei.agconnect:agcp:1.3.1.300"
 
-        classpath 'com.google.gms:google-services:4.3.4'
+        //classpath 'com.google.gms:google-services:4.3.4'
         //classpath 'io.fabric.tools:gradle:1.29.0'  // Crashlytics plugin
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
