--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,9 @@
             </intent-filter>
         </activity>
 
+        <meta-data
+            android:name="push_kit_auto_init_enabled"
+            android:value="true" />
         <service
             android:name=".HMSPushService"
             android:exported="false">
@@ -36,6 +39,7 @@
                 <action android:name="com.huawei.push.action.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
     </application>
 
 </manifest>
